AX: WebKit does not trap user focus inside modals that have been DOM moved https://bugs.webkit.org/show_bug.cgi?id=240978

Reviewed by Andres Gonzalez.

In this patch, we now properly trap user focus inside non-empty modals
that have been DOM moved. This pattern is used in the WAI-ARIA aria-modal
usage example:

https://w3c.github.io/aria-practices/examples/dialog-modal/dialog.html

We do this by re-computing the live and isolated trees when the active
modal changes, since the presence of a modal effects every element on
the page.

This patch also includes several other modal improvements:
  - We no longer sometimes overwrite author manual focus (e.g. via JS)
    with our modal autofocus behavior.

  - We now properly re-compute the active modal when focus changes. This
    is relevant in cases where there are multiple modals, and an author
    changes focus from one to another, making the latter the new active
    modal.

This patch removes m_focusModalNodeTimer in favor of a new function
called focusCurrentModal(), which allows precise and synchronous control
over when modal autofocus happens. The asynchronous nature of the timer
made it hard to prevent overwriting manual author focus (e.g. via JS).

This patch fixes existing tests in ITM:
  - accessibility/aria-modal-multiple-dialogs.html
  - accessibility/ignore-modals-without-any-content.html
  - accessibility/mac/aria-modal-auto-focus.html

And adds a new test:
accessibility/recompute-current-modal-after-aria-modal-element-appears.html

* LayoutTests/accessibility/aria-modal-multiple-dialogs-expected.txt:
* LayoutTests/accessibility/aria-modal-multiple-dialogs.html:
* LayoutTests/accessibility/recompute-current-modal-after-aria-modal-element-appears-expected.txt: Added.
* LayoutTests/accessibility/recompute-current-modal-after-aria-modal-element-appears.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::AXObjectCache):
(WebCore::AXObjectCache::~AXObjectCache):
(WebCore::AXObjectCache::updateCurrentModalNode):
(WebCore::AXObjectCache::updateCurrentModalNodeInternal):
(WebCore::AXObjectCache::modalNode):
(WebCore::AXObjectCache::deferNodeAddedOrRemoved):
(WebCore::AXObjectCache::handleFocusedUIElementChanged):
(WebCore::AXObjectCache::focusCurrentModal):
(WebCore::AXObjectCache::performDeferredCacheUpdate):
(WebCore::AXObjectCache::currentModalNode): Deleted.
(WebCore::AXObjectCache::focusModalNode): Deleted.
(WebCore::AXObjectCache::focusModalNodeTimerFired): Deleted.
(WebCore::AXObjectCache::handleModalChange): Deleted.
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::AXObjectCache):
(WebCore::AXObjectCache::focusCurrentModal):
(WebCore::AXObjectCache::handleAriaExpandedChange):
(WebCore::AXObjectCache::handleFocusedUIElementChanged):
(WebCore::AXObjectCache::focusModalNodeTimerFired): Deleted.
(WebCore::AXObjectCache::handleModalChange): Deleted.

Canonical link: https://commits.webkit.org/251374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295366 268f45cc-cd09-0410-ab3c-d52691b4dbfc